Set submodules branch

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,8 @@
 [submodule "External/Fingear"]
 	path = External/Fingear
 	url = https://github.com/ReMinoer/Fingear
+	branch = master
 [submodule "External/MonoGame.Framework.WpfInterop"]
 	path = External/MonoGame.Framework.WpfInterop
 	url = https://github.com/ReMinoer/MonoGame.Framework.WpfInterop.git
+	branch = master
