--- a/Glyph.Engine/Glyph.Engine.csproj
+++ b/Glyph.Engine/Glyph.Engine.csproj
@@ -41,12 +41,6 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Windows.Forms" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="GlyphEngine.cs" />
@@ -66,9 +60,21 @@
       <Project>{CF81F12F-4EFA-4A26-9853-DF86973533CE}</Project>
       <Name>Diese.Debug</Name>
     </ProjectReference>
+    <ProjectReference Include="..\External\Fingear\External\Stave\External\Diese\Diese.Graph\Diese.Graph.csproj">
+      <Project>{BBC6C938-95A5-4CBF-AA6B-DA2A9A09C4F1}</Project>
+      <Name>Diese.Graph</Name>
+    </ProjectReference>
     <ProjectReference Include="..\External\Fingear\External\Stave\External\Diese\Diese.Injection\Diese.Injection.csproj">
       <Project>{6ADD41DC-F168-43C4-AD4E-F6B8218D8F7C}</Project>
       <Name>Diese.Injection</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\External\Fingear\External\Stave\External\Diese\Diese.Scheduling\Diese.Scheduling.csproj">
+      <Project>{ED3283B6-9691-4418-96D0-6E83AEE37540}</Project>
+      <Name>Diese.Scheduling</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\External\Fingear\External\Stave\External\Diese\Diese\Diese.csproj">
+      <Project>{f2f3feb2-8453-409e-b00c-96dc64ac8020}</Project>
+      <Name>Diese</Name>
     </ProjectReference>
     <ProjectReference Include="..\External\Fingear\External\Stave\Stave\Stave.csproj">
       <Project>{38A041E6-5AA9-4C22-B96F-35167F171959}</Project>
