--- a/Glyph.Audio/packages.config
+++ b/Glyph.Audio/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Fody" version="2.1.0" targetFramework="net45" developmentDependency="true" />
   <package id="MonoGame.Framework.WindowsDX" version="3.5.1.1679" targetFramework="net45" />
-  <package id="NLog" version="4.4.1" targetFramework="net45" />
+  <package id="NLog" version="4.4.12" targetFramework="net45" />
+  <package id="PropertyChanged.Fody" version="2.1.4" targetFramework="net45" developmentDependency="true" />
 </packages>
