--- a/Glyph/Glyph.csproj
+++ b/Glyph/Glyph.csproj
@@ -91,12 +91,12 @@
     <Compile Include="Math\Shapes\TopLeftRectangle.cs" />
     <Compile Include="Math\Transformation.cs" />
     <Compile Include="Point.Extension.cs" />
-    <Compile Include="PropertyChanged\INotifyPropertyChangedConfiguration.cs" />
-    <Compile Include="PropertyChanged\IPropertyChangedObservable.cs" />
-    <Compile Include="PropertyChanged\NotifyPropertyChangedConfiguration.cs" />
-    <Compile Include="PropertyChanged\PropertyChangedObservable.cs" />
-    <Compile Include="PropertyChanged\ConfigurableNotifyPropertyChanged.cs" />
-    <Compile Include="PropertyChanged\SubjectPool.cs" />
+    <Compile Include="Observation\Properties\INotifyPropertyChangedConfiguration.cs" />
+    <Compile Include="Observation\Properties\IPropertyChangedObservable.cs" />
+    <Compile Include="Observation\Properties\NotifyPropertyChangedConfiguration.cs" />
+    <Compile Include="Observation\Properties\PropertyChangedObservable.cs" />
+    <Compile Include="Observation\Properties\ConfigurableNotifyPropertyChanged.cs" />
+    <Compile Include="Observation\Properties\SubjectPool.cs" />
     <Compile Include="Rectangle.Extension.cs" />
     <Compile Include="Referential.cs" />
     <Compile Include="Resolution.cs" />
