--- a/Glyph.Scripting/Glyph.Scripting.csproj
+++ b/Glyph.Scripting/Glyph.Scripting.csproj
@@ -35,9 +35,7 @@
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Fody">
-      <Version>2.1.0</Version>
-    </PackageReference>
+    <PackageReference Include="Fody" Version="2.1.0" />
     <PackageReference Include="MonoGame.Framework.WindowsDX" Version="3.5.1.1679" />
     <PackageReference Include="PropertyChanged.Fody" Version="2.1.4" />
   </ItemGroup>
