--- a/Glyph.UI/Glyph.UI.csproj
+++ b/Glyph.UI/Glyph.UI.csproj
@@ -33,9 +33,7 @@
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Fody">
-      <Version>2.1.0</Version>
-    </PackageReference>
+    <PackageReference Include="Fody" Version="2.1.0" />
     <PackageReference Include="MonoGame.Framework.WindowsDX" Version="3.5.1.1679" />
     <PackageReference Include="PropertyChanged.Fody" Version="2.1.4" />
     <PackageReference Include="System.Numerics.Vectors" Version="4.4.0" />
