--- a/Glyph.Animation/Glyph.Animation.csproj
+++ b/Glyph.Animation/Glyph.Animation.csproj
@@ -33,10 +33,18 @@
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Fody" Version="2.1.0" />
-    <PackageReference Include="MonoGame.Framework.WindowsDX" Version="3.5.1.1679" />
-    <PackageReference Include="NLog" Version="4.4.12" />
-    <PackageReference Include="PropertyChanged.Fody" Version="2.1.4" />
+    <PackageReference Include="Fody">
+      <Version>2.1.0</Version>
+    </PackageReference>
+    <PackageReference Include="MonoGame.Framework.Portable">
+      <Version>3.6.0.1625</Version>
+    </PackageReference>
+    <PackageReference Include="NLog">
+      <Version>4.4.12</Version>
+    </PackageReference>
+    <PackageReference Include="PropertyChanged.Fody">
+      <Version>2.1.4</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
