--- a/Glyph.Space/Glyph.Space.csproj
+++ b/Glyph.Space/Glyph.Space.csproj
@@ -32,9 +32,15 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Fody" Version="2.1.0" />
-    <PackageReference Include="MonoGame.Framework.WindowsDX" Version="3.5.1.1679" />
-    <PackageReference Include="PropertyChanged.Fody" Version="2.1.4" />
+    <PackageReference Include="Fody">
+      <Version>2.1.0</Version>
+    </PackageReference>
+    <PackageReference Include="MonoGame.Framework.Portable">
+      <Version>3.6.0.1625</Version>
+    </PackageReference>
+    <PackageReference Include="PropertyChanged.Fody">
+      <Version>2.1.4</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
