--- a/Glyph/Glyph.csproj
+++ b/Glyph/Glyph.csproj
@@ -33,9 +33,15 @@
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="MonoGame.Framework.WindowsDX" Version="3.5.1.1679" />
-    <PackageReference Include="NLog" Version="4.4.12" />
-    <PackageReference Include="System.Reactive" Version="3.1.1" />
+    <PackageReference Include="MonoGame.Framework.Portable">
+      <Version>3.6.0.1625</Version>
+    </PackageReference>
+    <PackageReference Include="NLog">
+      <Version>4.4.12</Version>
+    </PackageReference>
+    <PackageReference Include="System.Reactive">
+      <Version>3.1.1</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
