--- a/Glyph.Effects/Glyph.Effects.csproj
+++ b/Glyph.Effects/Glyph.Effects.csproj
@@ -37,7 +37,7 @@
       <Version>2.1.0</Version>
     </PackageReference>
     <PackageReference Include="MonoGame.Framework.Portable">
-      <Version>3.6.0.1625</Version>
+      <Version>3.7.0.1097-develop</Version>
     </PackageReference>
     <PackageReference Include="PropertyChanged.Fody">
       <Version>2.1.4</Version>
