--- a/Glyph/Glyph.csproj
+++ b/Glyph/Glyph.csproj
@@ -34,7 +34,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="MonoGame.Framework.Portable">
-      <Version>3.6.0.1625</Version>
+      <Version>3.7.0.1097-develop</Version>
     </PackageReference>
     <PackageReference Include="NLog">
       <Version>4.4.12</Version>
