--- a/Glyph/Glyph.csproj
+++ b/Glyph/Glyph.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Color.Extension.cs" />
     <Compile Include="Exceptions\GlyphException.cs" />
     <Compile Include="Axes.cs" />
+    <Compile Include="IO\FileType.cs" />
     <Compile Include="GlyphData.cs" />
     <Compile Include="IDirtable.cs" />
     <Compile Include="IDrawClient.cs" />
@@ -67,6 +68,11 @@
     <Compile Include="Injection\GlyphInjectableAttribute.cs" />
     <Compile Include="Injection\GlyphInjectableTargets.cs" />
     <Compile Include="Injection\IGlyphInjectableAttribute.cs" />
+    <Compile Include="IO\ILoadFormat.cs" />
+    <Compile Include="IO\ISaveFormat.cs" />
+    <Compile Include="IO\ISaveLoadFormat.cs" />
+    <Compile Include="IO\Base\SaveLoadFormatBase.cs" />
+    <Compile Include="IO\XmlSerializationFormat.cs" />
     <Compile Include="ITimeUnscalable.cs" />
     <Compile Include="Math\IArea.cs" />
     <Compile Include="Math\IShape.cs" />
