--- a/Glyph.Composition/Glyph.Composition.csproj
+++ b/Glyph.Composition/Glyph.Composition.csproj
@@ -23,6 +23,7 @@
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
     <Prefer32Bit>false</Prefer32Bit>
+    <LangVersion>default</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|AnyCPU'">
     <OutputPath>bin\Release\</OutputPath>
@@ -52,12 +53,14 @@
   <ItemGroup>
     <Compile Include="Base\GlyphComponentBase.cs" />
     <Compile Include="Base\GlyphContainerBase.cs" />
+    <Compile Include="Messaging\ComponentRouterSystem.cs" />
     <Compile Include="Messaging\CompositionMessage.cs" />
     <Compile Include="Messaging\DecompositionMessage.cs" />
     <Compile Include="Messaging\ICompositionMessage.cs" />
     <Compile Include="Messaging\IDecompositionMessage.cs" />
     <Compile Include="Messaging\IDisposingMessage.cs" />
     <Compile Include="Messaging\IInstantiatingMessage.cs" />
+    <Compile Include="Messaging\ILocalInterpreter.cs" />
     <Compile Include="Messaging\MessageHelper.cs" />
     <Compile Include="Delegates\DrawDelegate.cs" />
     <Compile Include="DrawUtils.cs" />
@@ -69,7 +72,6 @@
     <Compile Include="IUpdate.cs" />
     <Compile Include="Messaging\DisposingMessage.cs" />
     <Compile Include="Messaging\InstantiatingMessage.cs" />
-    <Compile Include="Messaging\Receiver.cs" />
     <Compile Include="Modelization\CompositeData.cs" />
     <Compile Include="Exceptions\SingleComponentException.cs" />
     <Compile Include="GlyphComponent.cs" />
@@ -108,6 +110,10 @@
     <ProjectReference Include="..\Glyph.Messaging\Glyph.Messaging.csproj">
       <Project>{26405f4b-4532-4f48-a96f-594a70c12b3e}</Project>
       <Name>Glyph.Messaging</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Glyph.Space\Glyph.Space.csproj">
+      <Project>{068202CC-E943-4718-9771-62D72E50623E}</Project>
+      <Name>Glyph.Space</Name>
     </ProjectReference>
     <ProjectReference Include="..\Glyph\Glyph.csproj">
       <Project>{457CBBF3-26C7-478B-B4EB-1F85FF3C07F5}</Project>
