--- a/Glyph.Core/Glyph.Core.csproj
+++ b/Glyph.Core/Glyph.Core.csproj
@@ -98,11 +98,10 @@
     <Compile Include="Layers\LayerBase.cs" />
     <Compile Include="Layers\LayerManager.cs" />
     <Compile Include="Layers\LayerRoot.cs" />
-    <Compile Include="Messaging\ILocalInterpreter.cs" />
-    <Compile Include="Messaging\LocalRouter.cs" />
     <Compile Include="PositionBinding.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReadOnlySceneNode.cs" />
+    <Compile Include="Receiver.cs" />
     <Compile Include="SceneGraphUtils.cs" />
     <Compile Include="SceneNode.cs" />
     <Compile Include="SceneNodeExtension.cs" />
