--- a/Glyph.Messaging/Glyph.Messaging.csproj
+++ b/Glyph.Messaging/Glyph.Messaging.csproj
@@ -34,12 +34,19 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IInterpreter.cs" />
+    <Compile Include="ComparableContestMessage.cs" />
+    <Compile Include="ContestMessage.cs" />
+    <Compile Include="ISubscribableRouter.cs" />
+    <Compile Include="ITrackingRouter.cs" />
+    <Compile Include="OpenMessage.cs" />
+    <Compile Include="HandlableMessage.cs" />
+    <Compile Include="HandlerMessage.cs" />
     <Compile Include="IMessage.cs" />
+    <Compile Include="IInterpreter.cs" />
     <Compile Include="IRouter.cs" />
-    <Compile Include="Message.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Router.cs" />
+    <Compile Include="SubscribeRouter.cs" />
+    <Compile Include="TrackingRouter.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\External\Fingear\External\Stave\External\Diese\Diese.Collections\Diese.Collections.csproj">
