--- a/Glyph.Core/Glyph.Core.csproj
+++ b/Glyph.Core/Glyph.Core.csproj
@@ -131,10 +131,6 @@
       <Project>{BBC6C938-95A5-4CBF-AA6B-DA2A9A09C4F1}</Project>
       <Name>Diese.Graph</Name>
     </ProjectReference>
-    <ProjectReference Include="..\External\Fingear\External\Stave\External\Diese\Diese.Injection\Diese.Injection.csproj">
-      <Project>{6ADD41DC-F168-43C4-AD4E-F6B8218D8F7C}</Project>
-      <Name>Diese.Injection</Name>
-    </ProjectReference>
     <ProjectReference Include="..\External\Fingear\External\Stave\External\Diese\Diese.Modelization\Diese.Modelization.csproj">
       <Project>{0781AD0F-EB0F-442E-9A1C-34C2AA9319FD}</Project>
       <Name>Diese.Modelization</Name>
@@ -158,6 +154,14 @@
     <ProjectReference Include="..\External\Fingear\Fingear\Fingear.csproj">
       <Project>{7ee0b116-6b49-4073-99d8-827dd68b8ae0}</Project>
       <Name>Fingear</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\External\Niddle\Niddle\Niddle.csproj">
+      <Project>{91EF736F-8196-4DB7-BDEC-9FE05B14C179}</Project>
+      <Name>Niddle</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\External\Niddle\Niddle\Niddle.csproj">
+      <Project>{91EF736F-8196-4DB7-BDEC-9FE05B14C179}</Project>
+      <Name>Niddle</Name>
     </ProjectReference>
     <ProjectReference Include="..\Glyph.Composition\Glyph.Composition.csproj">
       <Project>{8D4F4138-EB36-4427-9A2B-10A50723268C}</Project>
