--- a/Glyph.Graphics.Particles/Glyph.Graphics.Particles.csproj
+++ b/Glyph.Graphics.Particles/Glyph.Graphics.Particles.csproj
@@ -52,10 +52,6 @@
     <Compile Include="StandardParticle.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\External\Fingear\External\Stave\External\Diese\Diese.Injection\Diese.Injection.csproj">
-      <Project>{6ADD41DC-F168-43C4-AD4E-F6B8218D8F7C}</Project>
-      <Name>Diese.Injection</Name>
-    </ProjectReference>
     <ProjectReference Include="..\External\Fingear\External\Stave\External\Diese\Diese.Modelization\Diese.Modelization.csproj">
       <Project>{0781ad0f-eb0f-442e-9a1c-34c2aa9319fd}</Project>
       <Name>Diese.Modelization</Name>
@@ -67,6 +63,10 @@
     <ProjectReference Include="..\External\Fingear\External\Stave\Stave\Stave.csproj">
       <Project>{38a041e6-5aa9-4c22-b96f-35167f171959}</Project>
       <Name>Stave</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\External\Niddle\Niddle\Niddle.csproj">
+      <Project>{91EF736F-8196-4DB7-BDEC-9FE05B14C179}</Project>
+      <Name>Niddle</Name>
     </ProjectReference>
     <ProjectReference Include="..\Glyph.Animation\Glyph.Animation.csproj">
       <Project>{2384DA3A-F989-4B1B-9044-A005CE8F4AB6}</Project>
