--- a/Glyph/Glyph.csproj
+++ b/Glyph/Glyph.csproj
@@ -153,13 +153,13 @@
       <Project>{8E354191-E8E5-498B-9C24-A6765DA86417}</Project>
       <Name>Diese.Collections</Name>
     </ProjectReference>
-    <ProjectReference Include="..\External\Fingear\External\Stave\External\Diese\Diese.Injection\Diese.Injection.csproj">
-      <Project>{6ADD41DC-F168-43C4-AD4E-F6B8218D8F7C}</Project>
-      <Name>Diese.Injection</Name>
-    </ProjectReference>
     <ProjectReference Include="..\External\Fingear\External\Stave\External\Diese\Diese.Modelization\Diese.Modelization.csproj">
       <Project>{0781AD0F-EB0F-442E-9A1C-34C2AA9319FD}</Project>
       <Name>Diese.Modelization</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\External\Niddle\Niddle\Niddle.csproj">
+      <Project>{91EF736F-8196-4DB7-BDEC-9FE05B14C179}</Project>
+      <Name>Niddle</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
